--- a/loader.html
+++ b/loader.html
@@ -195,7 +195,7 @@ display: none;
 <div id="richList"></div>
 
 
-<div id="loader" class="lds-dual-ring hidden overlay">lll</div>
+<div id="loader" class="lds-dual-ring hidden overlay"></div>
  -->
 
  <div class="cover">
